[package]
name = "unicode-names"
version = "0.1.1"
edition = "2021"
authors = [ "ayosec@gmail.com" ]
license = "Apache-2.0"
description = "CLI tool to search Unicode characters by their names."
readme = "README.md"

[dependencies]
flate2 = { version = "1.0.24", features = ["zlib"], default-features = false }
lexopt = "0.3.0"

[build-dependencies]
flate2 = { version = "1.0.24", default-features = false, features = ["zlib"] }
twox-hash = { version = "1.6.3", default-features = false }
ureq = "2.5.0"

[profile.release]
panic = "abort"
strip = "debuginfo"
lto = true

[package.metadata.deb]
extended-description = "-"
